- implemented a "partly checked" icon & behavior for "Insert Into" category
- songs already in a category won't be added again
- fixed song slider/window title refresh behavior
- fixed grouping bug: empty values will now be grouped, too (if threshold was set to 1, empty entries caused problems)
- implemented a dummy player class (if no media player available, easier code maintenance)


########################
 version 0.8.1
- just a fix in the config.h file due to compiling problems

########################
25.03.2003 version 0.8.0
- changed and hopefully improved configure script and makefiles
- added an advanced guessing mode (identifying "/artist/album/01 - trackname")
- added command-line parameter to specify different base directory (for database and settings)
- inserted a proper autoplay function (working on all folders)
- finished noatun support (skip backward, restarting instances)
- set default sort order for albums: trackNr
- fixed: genre grouping bug
- fixed: table headers not restoring to saved value on first appearance
- last open folder will be remembered for next session
- a lot of minor changes and cleanups


############################
12.02.2003 version 0.8.0beta
- support for noatun!!! (controlling two noatun instances via dcop, enabling crossfading!)
  - added configuration for crossfading with noatun
  - cleaned up the abstract media player class and communication between player and Yammi
    (=> enabling to more easily support other players)
- introduced an option to configure the filename pattern
- added warning dialog boxes when correcting tags or filenames
- added a field "proposed filename" to song info dialog, changed labels to (read-only)lineEdit widgets
- using genre table provided with id3lib
- little changes to configure.in (no more checking for id3lib, you have to disable it manually if needed)
- added some new replacements: %X, %Y, %W, %L, %r
- added "insert into->new category" (finally, Tom!)