@@ -3,39 +3,25 @@
 <KDevPrjSession>
 <LastCompileConfig>(Default)</LastCompileConfig>
  <Mainframe MaximizeMode="1" />
- <DocsAndViews NumberOfDocuments="16" >
-<Doc0 CursorPosLine="2027" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="6" FileName="/home/oliver/work/programming/yammi/yammi/yammigui.cpp" >
+ <DocsAndViews NumberOfDocuments="9" >
+<Doc0 CursorPosLine="2567" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/yammi/yammigui.cpp" >
 <View0 Top="23" Width="400" Attach="1" Height="300" Left="3" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc0>
-  <Doc1 CursorPosLine="44" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="6" FileName="/home/oliver/work/programming/yammi/yammi/prefs.cpp" >
+  <Doc1 CursorPosLine="247" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="14" FileName="/home/oliver/work/programming/yammi/yammi/yammigui.h" >
 <View0 Top="44" Width="799" Attach="1" Height="412" Left="24" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc1>
-  <Doc2 CursorPosLine="937" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="44" FileName="/home/oliver/work/programming/yammi/yammi/yammimodel.cpp" >
+  <Doc2 CursorPosLine="103" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/yammi/mylist.cpp" >
 <View0 Top="65" Width="799" Attach="1" Height="397" Left="45" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc2>
-  <Doc3 CursorPosLine="160" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/yammi/prefs.h" >
-<View0 Top="86" Width="799" Attach="1" Height="412" Left="66" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc3>
-  <Doc4 CursorPosLine="34" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/yammi/yammiapplication.h" >
-<View0 Top="107" Width="799" Attach="1" Height="397" Left="87" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc4>
-  <Doc5 CursorPosLine="39" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="45" FileName="/home/oliver/work/programming/yammi/yammi/main.cpp" >
-<View0 Top="128" Width="799" Attach="1" Height="397" Left="108" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc5>
-  <Doc6 CursorPosLine="0" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/yammi.spec" >
+  <Doc3 CursorPosLine="47" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/yammi/mylist.h" >
+<View0 Top="86" Width="799" Attach="1" Height="397" Left="66" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc3>
+  <Doc4 CursorPosLine="26" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/TODO" >
+<View0 Top="84" Width="805" Attach="1" Height="423" Left="84" Focus="1" Type="KWriteView" MinMaxMode="2" />  </Doc4>
+  <Doc5 CursorPosLine="20" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/yammi/yammimodel.cpp" >
+<View0 Top="128" Width="799" Attach="1" Height="412" Left="108" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc5>
+  <Doc6 CursorPosLine="141" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/yammi/prefs.cpp" >
 <View0 Top="149" Width="799" Attach="1" Height="397" Left="129" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc6>
-  <Doc7 CursorPosLine="39" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/configure.in" >
+  <Doc7 CursorPosLine="13" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/CHANGELOG" >
 <View0 Top="170" Width="799" Attach="1" Height="397" Left="150" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc7>
-  <Doc8 CursorPosLine="0" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/Makefile.am" >
-<View0 Top="191" Width="799" Attach="1" Height="397" Left="171" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc8>
-  <Doc9 CursorPosLine="20" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/TODO" >
-<View0 Top="212" Width="799" Attach="1" Height="397" Left="192" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc9>
-  <Doc10 CursorPosLine="52" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="1" FileName="/home/oliver/work/programming/yammi/yammi/songlistitem.cpp" >
-<View0 Top="233" Width="799" Attach="1" Height="397" Left="213" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc10>
-  <Doc11 CursorPosLine="1158" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="4" FileName="/home/oliver/work/programming/yammi/yammi/song.cpp" >
-<View0 Top="254" Width="799" Attach="1" Height="397" Left="234" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc11>
-  <Doc12 CursorPosLine="224" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="22" FileName="/home/oliver/work/programming/yammi/yammi/xmmsplayer.cpp" >
-<View0 Top="275" Width="799" Attach="1" Height="397" Left="255" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc12>
-  <Doc13 CursorPosLine="85" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/yammi/noatunplayer.h" >
-<View0 Top="296" Width="799" Attach="1" Height="397" Left="276" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc13>
-  <Doc14 CursorPosLine="445" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="2" FileName="/home/oliver/work/programming/yammi/yammi/noatunplayer.cpp" >
-<View0 Top="317" Width="799" Attach="1" Height="397" Left="297" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc14>
-  <Doc15 CursorPosLine="44" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="34" FileName="/home/oliver/work/programming/yammi/yammi/mediaplayer.h" >
-<View0 Top="315" Width="805" Attach="1" Height="423" Left="315" Focus="1" Type="KWriteView" MinMaxMode="2" />  </Doc15> </DocsAndViews>
+  <Doc8 CursorPosLine="25" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="24" FileName="/home/oliver/work/programming/yammi/yammiGrabAndEncode" >
+<View0 Top="191" Width="799" Attach="1" Height="397" Left="171" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc8> </DocsAndViews>
  <CompileConfigs>
 <Release>
 <Architecture>i386</Architecture>
