@@ -8,8 +8,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>391</width>
-            <height>213</height>
+            <width>262</width>
+            <height>129</height>
         </rect>
     </property>
     <property name="caption">
